--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" href="/vite.svg" sizes="180x180">
     <link rel="mask-icon" href="/vite.svg" color="#FFFFFF">
     <meta name="theme-color" content="#ffffff">
+    <script src="https://cdn.tailwindcss.com"></script>
   </head>
   <body>
     <div id="root"></div>
