--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React</title>
+    <title>Examen 2 Parcial</title>
     <meta name="description" content="My Awesome App description">
     <link rel="icon" href="/vite.svg">
     <link rel="apple-touch-icon" href="/vite.svg" sizes="180x180">
